--- a/build.gradle
+++ b/build.gradle
@@ -8,10 +8,11 @@ repositories {
 
 dependencies {
     testImplementation(
-            "com.codeborne:selenide:6.13.1",
+
+            "com.codeborne:selenide:6.17.1",
             "org.junit.jupiter:junit-jupiter:5.10.0",
-            "org.slf4j:slf4j-simple:2.0.7",
-            "io.github.bonigarcia:webdrivermanager:5.4.1"
+            "org.slf4j:slf4j-simple:2.0.7"
+
 
     )
 }
