--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,23 @@
 plugins {
-    id 'java-library'
+    id 'java'
+    id("io.qameta.allure") version "2.11.2"
+}
+
+group 'org.example'
+version '1.0-SNAPSHOT'
+
+allure {
+    report {
+        version.set("2.19.0")
+    }
+    adapter { // отвечает за появление папочки build/allure-results
+        aspectjWeaver.set(true) //обработка аннотации @Step
+        frameworks {
+            junit5 { //название фреймворка
+                adapterVersion.set("2.19.0") //версия интеграции фреймворка и Allure
+            }
+        }
+    }
 }
 
 repositories {
@@ -9,14 +27,15 @@ repositories {
 dependencies {
     testImplementation(
 
-            "com.codeborne:selenide:6.17.1",
-            "org.junit.jupiter:junit-jupiter:5.10.0",
-            "org.slf4j:slf4j-simple:2.0.7"
-
+            'com.codeborne:selenide:6.17.2',
+            'com.github.javafaker:javafaker:1.0.1',
+            'org.junit.jupiter:junit-jupiter:5.10.0',
+            'org.slf4j:slf4j-simple:2.0.7'
 
     )
 }
 
 test {
     useJUnitPlatform()
+    systemProperties(System.getProperties())
 }
