--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,48 @@
 plugins {
     id 'java'
-    id 'io.qameta.allure' version '2.9.6'
+    id("io.qameta.allure") version "2.11.2"
 }
+
 group 'org.example'
 version '1.0-SNAPSHOT'
+
+allure {
+    report {
+        version.set("2.19.0")
+    }
+    adapter { // отвечает за появление папочки build/allure-results
+        aspectjWeaver.set(true) //обработка аннотации @Step
+        frameworks {
+            junit5 { //название фреймворка
+                adapterVersion.set("2.19.0") //версия интеграции фреймворка и Allure
+            }
+        }
+    }
+}
 
 repositories {
     mavenCentral()
 }
+
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-    testImplementation 'io.rest-assured:rest-assured:4.4.0'
-    testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2'
-    testImplementation 'com.codeborne:selenide:6.6.6'
-    implementation 'io.qameta.allure:allure-java-commons:2.12.1'
-    implementation 'io.qameta.allure:allure-commandline:2.12.1'
-    implementation 'io.qameta.allure:allure-rest-assured:2.12.1'
-    implementation 'io.qameta.allure:allure-junit5:2.12.1'
-    implementation 'io.qameta.allure:allure-assertj:2.12.1'
-    implementation 'io.qameta.allure:allure-selenide:2.12.1'
+    testImplementation(
+
+            'com.codeborne:selenide:6.17.2',
+            'com.github.javafaker:javafaker:1.0.1',
+            'org.junit.jupiter:junit-jupiter:5.10.0',
+            'org.slf4j:slf4j-simple:2.0.7'
+
+    )
 }
 
-def uiTest = tasks.register("uiTests", Test) {
+def uiTest = tasks.register("RegistrationWithPageObjectTests", Test) {
     useJUnitPlatform {
         includeTags "UI"
     }
 }
+
+
 test {
     useJUnitPlatform()
+    systemProperties(System.getProperties())
 }
