--- a/build.gradle
+++ b/build.gradle
@@ -6,40 +6,33 @@ plugins {
 group 'org.example'
 version '1.0-SNAPSHOT'
 
-allure {
-    report {
-        version.set("2.19.0")
-    }
-    adapter { // отвечает за появление папочки build/allure-results
-        aspectjWeaver.set(true) //обработка аннотации @Step
-        frameworks {
-            junit5 { //название фреймворка
-                adapterVersion.set("2.19.0") //версия интеграции фреймворка и Allure
-            }
-        }
-    }
-}
-
 repositories {
     mavenCentral()
 }
 
 dependencies {
     testImplementation(
-
             'com.codeborne:selenide:6.17.2',
             'com.github.javafaker:javafaker:1.0.1',
             'org.junit.jupiter:junit-jupiter:5.10.0',
             'org.slf4j:slf4j-simple:2.0.7'
-
     )
+
+    implementation 'io.qameta.allure:allure-java-commons:2.12.1'
+    implementation 'io.qameta.allure:allure-commandline:2.12.1'
+    implementation 'io.qameta.allure:allure-rest-assured:2.12.1'
+    implementation 'io.qameta.allure:allure-junit5:2.12.1'
+    implementation 'io.qameta.allure:allure-assertj:2.12.1'
+    implementation 'io.qameta.allure:allure-selenide:2.12.1'
+
 }
 
-task simple_test(type: Test) {
-    useJUnitPlatform{
-        includeTags("UI")
+def uiTest = tasks.register("uiTests", Test) {
+    useJUnitPlatform {
+        includeTags "UI"
     }
 }
+
 
 test {
     useJUnitPlatform()
